# orbytech-stack

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  README.md  package.json  pnpm-workspace.yaml  tsconfig.json
apps/api/: README.md  jest.config.js  package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/config/: index.ts  rateLimit.ts
apps/api/src/controllers/: payment.controller.ts  wallet.controller.ts
apps/api/src/middleware/: auth.middleware.ts  error.middleware.ts  request.middleware.ts
apps/api/src/routes/: auth.routes.ts  payment.routes.ts  stats.routes.ts  streaming.routes.ts  wallet.routes.ts
apps/api/src/services/: stellar.service.ts
apps/api/src/tests/: setup.ts  wallet.test.ts
apps/api/src/types/: index.ts
apps/api/src/utils/: validation.ts
apps/web/: .env.example  README.md  next.config.js  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/: SendPayment.tsx  StreamingPayment.tsx  ThemeToggle.tsx  TransactionHistory.tsx  WalletBalance.tsx  WalletConnect.tsx
apps/web/src/hooks/: useStellar.ts
apps/web/src/lib/: ThemeProvider.tsx  utils.ts
apps/web/src/services/: stellar.service.ts
contracts/: Cargo.toml  README.md
contracts/payments/: Cargo.toml  package.json
contracts/payments/src/: lib.rs  tests.rs
contracts/scripts/: build.sh  deploy.sh  test.sh
contracts/scripts/examples/: payment_example.ts
contracts/streaming/: package.json
contracts/streaming/src/: lib.rs
docs/: README.md  api.md  contracts.md
(+1 files in other folders)
